assets/source/sass/search.scss
#sidebar-slider-area--container {
  position: relative;
}

#search-form--field {
  .c-field__inner {
    height: 100%;
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
  }
}

#hero {
  position: relative;
}

#hero-search-form {
    position: absolute;
    width:clamp(min(100%, 600px), 30%, max(30%, 600px));
    transform: translate(-50%, -50%);
    z-index: 1;
    left: 50%;

    &.c-form--centered {
      top: 50%;
    }

    &.c-form--bottom {
      top: 80%;
    }

    &.c-form--top {
      top: 20%;
    }

    #hero-search-form__wrapper {
      

      .c-field__inner {
        // border:none;
      }

      #hero-search-form__field {
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;

        label {
          display: none;
        }        
      }

      #hero-search-form__submit {
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
      }
    }

    .c-slider,
    .c-slider__container {
      border-radius: 0;
    }
}

#hero-search-form,
#header-search-form,
#menu-mega,
#mobile-search-form,
#drawer-search-form {
  &.c-form.search-form,
  .c-form {
    .c-field__inner,
    .c-field__inner input:focus + .c-field_focus-styler {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
    }
  }
}

#header-search-form input[type="search"],
#header-search-form .c-field__inner,
#mobile-search-form input[type="search"],
#mobile-search-form .c-field__inner,
#drawer-search-form input[type="search"],
#drawer-search-form .c-field__inner {
  height: 100%;
}


@media print {
  #sidebar-slider-area--container {
    display: none;
  }
}

